--- a/Tema 9/Boletín2_Aplicaciones_Graficas/Boletín2_Aplicaciones_Graficas.csproj
+++ b/Tema 9/Boletín2_Aplicaciones_Graficas/Boletín2_Aplicaciones_Graficas.csproj
@@ -112,10 +112,40 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Profesores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Profesores.Designer.cs">
+      <DependentUpon>Profesores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Ejercicio1.resx">
       <DependentUpon>Ejercicio1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio2.resx">
+      <DependentUpon>Ejercicio2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio3.resx">
+      <DependentUpon>Ejercicio3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio4.resx">
+      <DependentUpon>Ejercicio4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio5.resx">
+      <DependentUpon>Ejercicio5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio6.resx">
+      <DependentUpon>Ejercicio6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio7.resx">
+      <DependentUpon>Ejercicio7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio8.resx">
+      <DependentUpon>Ejercicio8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicio9.resx">
+      <DependentUpon>Ejercicio9.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -128,6 +158,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -141,6 +172,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tigre.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tiburon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Jirafa.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\solo leveling.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 4.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 5.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dado numero 6.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
