--- a/Tema 9/Proyecto_final/Proyecto_final.csproj
+++ b/Tema 9/Proyecto_final/Proyecto_final.csproj
@@ -58,11 +58,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Producto.cs">
+    <Compile Include="Info_Producto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Producto.Designer.cs">
-      <DependentUpon>Producto.cs</DependentUpon>
+    <Compile Include="Info_Producto.Designer.cs">
+      <DependentUpon>Info_Producto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Moviles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Moviles.Designer.cs">
+      <DependentUpon>Moviles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ordenadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ordenadores.Designer.cs">
+      <DependentUpon>Ordenadores.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,6 +84,12 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Info_Producto.resx">
+      <DependentUpon>Info_Producto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ordenadores.resx">
+      <DependentUpon>Ordenadores.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -80,6 +98,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -93,6 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\volttier.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
